[gd_scene load_steps=2 format=2]

[ext_resource path="res://dialogue_editor/properties/value_slider.gd" type="Script" id=1]

[node name="value_slider" type="HBoxContainer"]
margin_right = 425.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="slider" type="HSlider" parent="."]
margin_right = 341.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -10.0
max_value = 10.0
scrollable = false
tick_count = 11
ticks_on_borders = true

[node name="spin_box" type="SpinBox" parent="."]
margin_left = 351.0
margin_right = 425.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = -10.0
max_value = 10.0
align = 2
[connection signal="value_changed" from="slider" to="." method="update_value" binds= [ "slider" ]]
[connection signal="value_changed" from="spin_box" to="." method="update_value" binds= [ "spin_box" ]]
